- fix in ModulePlanController for the updateNeeded flag: the reducer function must pass along the right value - mobile plan layout fixed (one row per 12 columns) because the height computation only works with single rows - layout definition split up into panta.forms, panta.custom.input and panta.custom.input.mobile to be able to apply the right layout for each device (iPad, iPhone, Android and desktop browsers) - helper function to add css files - helper function that will return true or false whether it should use default select styles (browser) or a custom panta style - iPad should be considered as non mobile browser but use the default select styles - add mobile and custom select css styles
(cherry picked from commit 31a9761)

--- a/public/css/panta.responsive.css
+++ b/public/css/panta.responsive.css
@@ -20,50 +20,6 @@ form label.focused:not(.prop-select) {
     border-color: #a5acb0;
 }
 
-form label {
-    border-radius: 3px 3px 0 0;
-    background: rgba(0, 0, 0, .03);
-    margin-bottom: 0;
-    padding: 0 0 0 0.45em;
-    border-left: 1px solid #798d99;
-    border-right: 1px solid #798d99;
-    border-top: 1px solid #798d99;
-    border-bottom: 0;
-    color: #B2B3B3;
-    font-weight: normal;
-}
-
-form .u-border, form .u-border:focus {
-    border-top: none;
-    overflow: auto;
-    outline: none;
-    outline: 0 !important;
-    border-radius: 0 0 3px 3px;
-    background: rgba(0, 0, 0, .03);
-    padding-top: 0;
-    -webkit-appearance: none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none !important;
-    margin-bottom: 4px;
-}
-
-form select.u-border, form select.u-border:focus {
-    margin: 0 0 5px 0;
-    background: rgba(0, 0, 0, .03);
-    border-top: 0;
-    border-left: 1px solid #798d99;
-    border-right: 1px solid #798d99;
-    border-bottom: 1px solid #798d99;
-    outline: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-
-    padding: .5em;
-    line-height: 18px;
-}
-
 .rows-2 {
     padding-bottom: 8px;
 }
